fix: loading state to show on fast reload on BookmarksPopover

--- a/src/components/Features/Job/JobList/JobList.module.css
+++ b/src/components/Features/Job/JobList/JobList.module.css
@@ -2,6 +2,7 @@
 .job-list {
   background-color: #fff;
   position: relative;
+  min-height: 140px;
   /* height: 100%; */
   flex: 1;
   display: flex;
